// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flip exclusive flags Flipper with pre-supplied mappers should maintain type-safety 1`] = `
Object {
  "a": false,
  "b": true,
}
`;

exports[`Flip exclusive flags Flipper with pre-supplied mappers should maintain type-safety 2`] = `
Object {
  "a": true,
  "b": false,
}
`;

exports[`Flip exclusive flags Should work correctly 1`] = `
Object {
  "a": true,
  "b": false,
  "c": false,
}
`;

exports[`Flip exclusive flags Should work correctly 2`] = `
Object {
  "a": false,
  "b": true,
  "c": false,
}
`;

exports[`Flip exclusive flags Should work correctly 3`] = `
Object {
  "a": 1,
  "b": 2,
  "c": 3,
}
`;

exports[`Flip exclusive flags Should work correctly 4`] = `
Object {
  "a": 1,
  "b": 2,
  "c": 3,
}
`;

exports[`Flip exclusive flags Should work correctly 5`] = `
Object {
  "a": 1,
  "b": 2,
  "c": 3,
}
`;

exports[`Flip exclusive flags Should work correctly 6`] = `
Object {
  "a": 1,
  "b": 2,
  "c": 3,
}
`;
